--- a/Rkeeper/Styles/LoginRegisterStyles/PswdBoxStyle.xaml
+++ b/Rkeeper/Styles/LoginRegisterStyles/PswdBoxStyle.xaml
@@ -1,12 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="pswdStyle" TargetType="PasswordBox">
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Style x:Key="pswdStyle" TargetType="TextBox">
 
         <Setter Property="Padding" Value="5,0"/>
 
         <Setter Property="Margin" Value="20"/>
 
-        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontSize" Value="24"/>
+
+        <Setter Property="FontFamily" Value="pack://application:,,,/Rkeeper;component/Assets/Fonts/#password"/>
 
         <Setter Property="VerticalContentAlignment" Value="Center"/>
 
@@ -24,14 +26,15 @@
 
             <Setter.Value>
 
-                <ControlTemplate TargetType="PasswordBox">
+                <ControlTemplate TargetType="TextBox">
 
                     <Border Name="Border" Background="White" BorderBrush="#484bf2" BorderThickness="1" CornerRadius="3">
                         <Grid>
 
                             <ScrollViewer x:Name="PART_ContentHost" Focusable="false" />
 
-                            <TextBlock x:Name="PlaceHolder" Foreground="Gray" Text="{TemplateBinding Name}" FontSize="{TemplateBinding FontSize}" FontStyle="Italic" FontFamily="{TemplateBinding FontFamily}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Margin="{TemplateBinding Padding}" Visibility="Visible"/>
+
+                            <TextBlock x:Name="PlaceHolder" Foreground="Gray" Text="{TemplateBinding Name}" FontSize="20" FontStyle="Italic" FontFamily="Segoe UI" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Margin="{TemplateBinding Padding}" Visibility="Collapsed"/>
 
                         </Grid>
                     </Border>
@@ -132,15 +135,30 @@
 
                         </Trigger>
 
+                        <MultiTrigger>
+
+                            <MultiTrigger.Conditions>
+
+                                <Condition Property="Text" Value=""/>
+
+                            </MultiTrigger.Conditions>
+
+                            <Setter Property="Visibility" TargetName="PlaceHolder" Value="Visible"/>
+
+                        </MultiTrigger>
 
                         <Trigger Property="IsFocused" Value="True">
 
                             <Setter Property="BorderBrush" TargetName="Border" Value="#484bf2"/>
 
                             <Setter Property="Effect">
+
                                 <Setter.Value>
+
                                     <DropShadowEffect Color="#484bf2" ShadowDepth="10" BlurRadius="10" Opacity="0.8"/>
+
                                 </Setter.Value>
+
                             </Setter>
 
                             <Trigger.EnterActions>
@@ -185,4 +203,5 @@
         </Setter>
 
     </Style>
+
 </ResourceDictionary>
