--- a/Rkeeper/Styles/LoginRegisterStyles/TxtBoxStyle.xaml
+++ b/Rkeeper/Styles/LoginRegisterStyles/TxtBoxStyle.xaml
@@ -1,5 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <SolidColorBrush x:Key="BorderColor" Color="#484bf2"/>
+
     <Style x:Key="txtStyle" TargetType="TextBox">
 
         <Setter Property="Padding" Value="5,0"/>
@@ -26,7 +29,7 @@
 
                 <ControlTemplate TargetType="TextBox">
 
-                    <Border Name="Border" Background="White" BorderBrush="#484bf2" BorderThickness="1" CornerRadius="3">
+                    <Border Name="Border" Background="White" BorderBrush="{StaticResource BorderColor}" BorderThickness="1" CornerRadius="3">
                         <Grid>
 
                             <ScrollViewer x:Name="PART_ContentHost" Focusable="false" />
@@ -47,7 +50,7 @@
 
                                 <Setter.Value>
 
-                                    <DropShadowEffect Color="LightSalmon" ShadowDepth="3" BlurRadius="3" Opacity="0.8"/>
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="3" BlurRadius="3" Opacity="0.8"/>
 
                                 </Setter.Value>
 
@@ -88,7 +91,7 @@
 
                         <Trigger Property="IsMouseOver" Value="False">
 
-                            <Setter Property="BorderBrush" TargetName="Border" Value="#484bf2"/>
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource BorderColor}"/>
 
                             <Setter Property="Effect">
 
@@ -147,13 +150,13 @@
 
                         <Trigger Property="IsFocused" Value="True">
 
-                            <Setter Property="BorderBrush" TargetName="Border" Value="#484bf2"/>
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource BorderColor}"/>
 
                             <Setter Property="Effect">
 
                                 <Setter.Value>
 
-                                    <DropShadowEffect Color="#484bf2" ShadowDepth="10" BlurRadius="10" Opacity="0.8"/>
+                                    <DropShadowEffect Color="{StaticResource BorderColor}" ShadowDepth="10" BlurRadius="10" Opacity="0.8"/>
 
                                 </Setter.Value>
 
