--- a/Rkeeper/Styles/TableStyle.xaml
+++ b/Rkeeper/Styles/TableStyle.xaml
@@ -1,30 +1,39 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="LoginRegisterBtnStyle" TargetType="Button">
-        <Setter Property="Margin" Value="60,10,60,50"/>
 
-        <Setter Property="FontSize" Value="35"/>
+    <SolidColorBrush x:Key="ShadowBrush" Color="#EF822E"/>
 
-        <Setter Property="FontWeight" Value="Bold"/>
+    <Color x:Key="DropEffecColor">#EF822E</Color>
+
+    <Style x:Key="TableStyle" TargetType="Button">
+
+        <Setter Property="Width" Value="200"/>
+
+        <Setter Property="Height" Value="150"/>
+
+        <Setter Property="Margin" Value="20,10"/>
+
+        <Setter Property="FontSize" Value="25"/>
+
+        <Setter Property="FontWeight" Value="DemiBold"/>
 
         <Setter Property="Foreground" Value="White"/>
 
         <Setter Property="Padding" Value="0,0,0,10"/>
 
         <Setter Property="Cursor" Value="Hand"/>
-        
+
         <Setter Property="Effect">
 
             <Setter.Value>
 
-                <DropShadowEffect Color="Transparent" ShadowDepth="5" BlurRadius="5" Opacity="0.8"/>
+                <DropShadowEffect Color="Transparent" ShadowDepth="0" BlurRadius="30" Opacity="0.8"/>
 
             </Setter.Value>
 
         </Setter>
 
         <Setter Property="Template">
-
             <Setter.Value>
 
                 <ControlTemplate TargetType="Button">
@@ -39,13 +48,13 @@
 
                         <Trigger Property="IsMouseOver" Value="True">
 
-                            <Setter Property="BorderBrush" TargetName="Border" Value="LightSalmon"/>
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource ShadowBrush}"/>
 
                             <Setter Property="Effect">
-                                
+
                                 <Setter.Value>
 
-                                    <DropShadowEffect Color="LightSalmon" ShadowDepth="3" BlurRadius="3" Opacity="0.8"/>
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="0" BlurRadius="0" Opacity="0.8"/>
 
                                 </Setter.Value>
 
@@ -57,9 +66,9 @@
 
                                     <Storyboard>
 
-                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).BlurRadius" To="10" Duration="0:0:0.2"/>
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).BlurRadius" To="30" Duration="0:0:0.2"/>
 
-                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).ShadowDepth" To="10" Duration="0:0:0.2"/>
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).ShadowDepth" To="0" Duration="0:0:0.2"/>
 
                                     </Storyboard>
 
@@ -86,13 +95,13 @@
 
                         <Trigger Property="IsMouseOver" Value="False">
 
-                            <Setter Property="BorderBrush" TargetName="Border" Value="LightSalmon"/>
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource ShadowBrush}"/>
 
                             <Setter Property="Effect">
-                                
+
                                 <Setter.Value>
 
-                                    <DropShadowEffect Color="LightSalmon" ShadowDepth="10" BlurRadius="10" Opacity="0.8"/>
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="0" BlurRadius="30" Opacity="0.8"/>
 
                                 </Setter.Value>
 
@@ -119,9 +128,9 @@
 
                                     <Storyboard>
 
-                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).BlurRadius" To="10" Duration="0:0:0.2"/>
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).BlurRadius" To="30" Duration="0:0:0.2"/>
 
-                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).ShadowDepth" To="10" Duration="0:0:0.2"/>
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).ShadowDepth" To="0" Duration="0:0:0.2"/>
 
                                     </Storyboard>
 
@@ -133,13 +142,13 @@
 
                         <Trigger Property="IsPressed" Value="True">
 
-                            <Setter Property="BorderBrush" TargetName="Border" Value="LightSalmon"/>
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource ShadowBrush}"/>
 
                             <Setter Property="Effect">
-                                
+
                                 <Setter.Value>
 
-                                    <DropShadowEffect Color="LightSalmon" ShadowDepth="10" BlurRadius="10" Opacity="0.8"/>
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="0" BlurRadius="30" Opacity="0.8"/>
 
                                 </Setter.Value>
 
@@ -163,17 +172,17 @@
                             <Trigger.ExitActions>
 
                                 <BeginStoryboard>
-                                    
+
                                     <Storyboard>
-                                    
-                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).BlurRadius" To="10" Duration="0:0:0.2"/>
-                                        
-                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).ShadowDepth" To="10" Duration="0:0:0.2"/>
-                                   
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).BlurRadius" To="30" Duration="0:0:0.2"/>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).ShadowDepth" To="0" Duration="0:0:0.2"/>
+
                                     </Storyboard>
-                                
+
                                 </BeginStoryboard>
-                                
+
                             </Trigger.ExitActions>
 
                         </Trigger>
@@ -187,5 +196,5 @@
         </Setter>
 
     </Style>
-    
+
 </ResourceDictionary>
