--- a/Rkeeper/Styles/LoginRegisterStyles/LoginRegisterButtonStyle.xaml
+++ b/Rkeeper/Styles/LoginRegisterStyles/LoginRegisterButtonStyle.xaml
@@ -1,6 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <SolidColorBrush x:Key="BorderBrush" Color="#EF822E"/>
+
     <Style x:Key="LoginRegisterBtnStyle" TargetType="Button">
+    
         <Setter Property="Margin" Value="60,10,60,50"/>
 
         <Setter Property="FontSize" Value="35"/>
@@ -39,13 +43,13 @@
 
                         <Trigger Property="IsMouseOver" Value="True">
 
-                            <Setter Property="BorderBrush" TargetName="Border" Value="LightSalmon"/>
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource BorderBrush}"/>
 
                             <Setter Property="Effect">
                                 
                                 <Setter.Value>
 
-                                    <DropShadowEffect Color="LightSalmon" ShadowDepth="3" BlurRadius="3" Opacity="0.8"/>
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="3" BlurRadius="3" Opacity="0.8"/>
 
                                 </Setter.Value>
 
@@ -86,13 +90,13 @@
 
                         <Trigger Property="IsMouseOver" Value="False">
 
-                            <Setter Property="BorderBrush" TargetName="Border" Value="LightSalmon"/>
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource BorderBrush}"/>
 
                             <Setter Property="Effect">
                                 
                                 <Setter.Value>
 
-                                    <DropShadowEffect Color="LightSalmon" ShadowDepth="10" BlurRadius="10" Opacity="0.8"/>
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="10" BlurRadius="10" Opacity="0.8"/>
 
                                 </Setter.Value>
 
@@ -133,13 +137,13 @@
 
                         <Trigger Property="IsPressed" Value="True">
 
-                            <Setter Property="BorderBrush" TargetName="Border" Value="LightSalmon"/>
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource BorderBrush}"/>
 
                             <Setter Property="Effect">
                                 
                                 <Setter.Value>
 
-                                    <DropShadowEffect Color="LightSalmon" ShadowDepth="10" BlurRadius="10" Opacity="0.8"/>
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="10" BlurRadius="10" Opacity="0.8"/>
 
                                 </Setter.Value>
 
