--- a/Rkeeper/Styles/LoginRegisterStyles/PswdBoxStyle.xaml
+++ b/Rkeeper/Styles/LoginRegisterStyles/PswdBoxStyle.xaml
@@ -1,5 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <SolidColorBrush x:Key="BorderColor" Color="#484bf2"/>
+
     <Style x:Key="pswdStyle" TargetType="TextBox">
 
         <Setter Property="Padding" Value="5,0"/>
@@ -28,7 +31,8 @@
 
                 <ControlTemplate TargetType="TextBox">
 
-                    <Border Name="Border" Background="White" BorderBrush="#484bf2" BorderThickness="1" CornerRadius="3">
+                    <Border Name="Border" Background="White" BorderBrush="{StaticResource BorderColor}" BorderThickness="1" CornerRadius="3">
+
                         <Grid>
 
                             <ScrollViewer x:Name="PART_ContentHost" Focusable="false" />
@@ -37,6 +41,7 @@
                             <TextBlock x:Name="PlaceHolder" Foreground="Gray" Text="{TemplateBinding Name}" FontSize="20" FontStyle="Italic" FontFamily="Segoe UI" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Margin="{TemplateBinding Padding}" Visibility="Collapsed"/>
 
                         </Grid>
+
                     </Border>
 
                     <ControlTemplate.Triggers>
@@ -49,7 +54,7 @@
 
                                 <Setter.Value>
 
-                                    <DropShadowEffect Color="LightSalmon" ShadowDepth="3" BlurRadius="3" Opacity="0.8"/>
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="3" BlurRadius="3" Opacity="0.8"/>
 
                                 </Setter.Value>
 
@@ -90,13 +95,13 @@
 
                         <Trigger Property="IsMouseOver" Value="False">
 
-                            <Setter Property="BorderBrush" TargetName="Border" Value="#484bf2"/>
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource BorderColor}"/>
 
                             <Setter Property="Effect">
 
                                 <Setter.Value>
 
-                                    <DropShadowEffect Color="LightSalmon" ShadowDepth="5" BlurRadius="5" Opacity="0.8"/>
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="5" BlurRadius="5" Opacity="0.8"/>
 
                                 </Setter.Value>
 
@@ -149,13 +154,13 @@
 
                         <Trigger Property="IsFocused" Value="True">
 
-                            <Setter Property="BorderBrush" TargetName="Border" Value="#484bf2"/>
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource BorderColor}"/>
 
                             <Setter Property="Effect">
 
                                 <Setter.Value>
 
-                                    <DropShadowEffect Color="#484bf2" ShadowDepth="10" BlurRadius="10" Opacity="0.8"/>
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="10" BlurRadius="10" Opacity="0.8"/>
 
                                 </Setter.Value>
 
