--- a/Rkeeper/Styles/UserViewStyles/OrderedFoodListElementStyle.xaml
+++ b/Rkeeper/Styles/UserViewStyles/OrderedFoodListElementStyle.xaml
@@ -1,8 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="UserControlStyle"
-           TargetType="{x:Type UserControl}">
+    <Style x:Key="GridStyle"
+           TargetType="{x:Type Grid}">
 
         <Setter Property="RenderTransform">
             <Setter.Value>
