--- a/Rkeeper/View/MainWindowComponentsView/OrderFoodView.xaml
+++ b/Rkeeper/View/MainWindowComponentsView/OrderFoodView.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Rkeeper.View.MainWindowComponentsView"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             Style="{StaticResource UserControlStyle}"
              d:DesignHeight="550" d:DesignWidth="800">
 
     <Grid>
@@ -113,7 +114,7 @@
 
                                 </Grid.Resources>
 
-                                <Border BorderBrush="#0A0A0A" BorderThickness="2" CornerRadius="10" Height="140">
+                                <Border BorderBrush="#0A0A0A" BorderThickness="2" CornerRadius="10" Height="140" ToolTip="{Binding Name}">
 
                                     <Border.Background>
 
@@ -121,7 +122,7 @@
 
                                             <VisualBrush.Visual>
 
-                                                <Image Source="{Binding ImageSource}" ToolTip="{Binding Name}"/>
+                                                <Image Source="{Binding ImageSource}"/>
 
                                             </VisualBrush.Visual>
 
@@ -168,7 +169,7 @@
 
                     <DataTemplate>
 
-                        <Grid Margin="4,5,4,0">
+                        <Grid Margin="4,5,4,0" Style="{StaticResource GridStyle}">
 
                             <Image Source="{Binding ImageSource}" Width="100" Height="100" Margin="5,15,5,2"/>
 
