--- a/Rkeeper/Styles/UserViewStyles/RemoveBtnStyle.xaml
+++ b/Rkeeper/Styles/UserViewStyles/RemoveBtnStyle.xaml
@@ -1,4 +1,202 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
+    <SolidColorBrush x:Key="ShadowBrush" Color="#FF1B1B"/>
+
+    <Color x:Key="DropEffecColor">#FF1B1B</Color>
+
+    <Style x:Key="RemoveBtnStyle" TargetType="Button">
+
+        <Setter Property="Width" Value="14"/>
+
+        <Setter Property="Height" Value="14"/>
+
+        <Setter Property="FontSize" Value="8"/>
+
+        <Setter Property="FontWeight" Value="DemiBold"/>
+
+        <Setter Property="Foreground" Value="White"/>
+
+        <Setter Property="Padding" Value="-1"/>
+
+        <Setter Property="Cursor" Value="Hand"/>
+
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+
+        <Setter Property="Effect">
+
+            <Setter.Value>
+
+                <DropShadowEffect Color="Transparent" ShadowDepth="0" BlurRadius="30" Opacity="0.8"/>
+
+            </Setter.Value>
+
+        </Setter>
+
+        <Setter Property="Template">
+            <Setter.Value>
+
+                <ControlTemplate TargetType="Button">
+
+                    <Border Name="Border" Background="{TemplateBinding Background}" BorderThickness="0" CornerRadius="5">
+
+                        <ContentPresenter Margin="{TemplateBinding Padding}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+
+                        <Trigger Property="IsMouseOver" Value="True">
+
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource ShadowBrush}"/>
+
+                            <Setter Property="Effect">
+
+                                <Setter.Value>
+
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="0" BlurRadius="0" Opacity="0.8"/>
+
+                                </Setter.Value>
+
+                            </Setter>
+
+                            <Trigger.EnterActions>
+
+                                <BeginStoryboard>
+
+                                    <Storyboard>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).BlurRadius" To="30" Duration="0:0:0.2"/>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).ShadowDepth" To="0" Duration="0:0:0.2"/>
+
+                                    </Storyboard>
+
+                                </BeginStoryboard>
+
+                            </Trigger.EnterActions>
+                            <Trigger.ExitActions>
+
+                                <BeginStoryboard>
+
+                                    <Storyboard>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).BlurRadius" To="0" Duration="0:0:0.2"/>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).ShadowDepth" To="0" Duration="0:0:0.2"/>
+
+                                    </Storyboard>
+
+                                </BeginStoryboard>
+
+                            </Trigger.ExitActions>
+
+                        </Trigger>
+
+                        <Trigger Property="IsMouseOver" Value="False">
+
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource ShadowBrush}"/>
+
+                            <Setter Property="Effect">
+
+                                <Setter.Value>
+
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="0" BlurRadius="30" Opacity="0.8"/>
+
+                                </Setter.Value>
+
+                            </Setter>
+
+                            <Trigger.EnterActions>
+
+                                <BeginStoryboard>
+
+                                    <Storyboard>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).BlurRadius" To="0" Duration="0:0:0.2"/>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).ShadowDepth" To="0" Duration="0:0:0.2"/>
+
+                                    </Storyboard>
+
+                                </BeginStoryboard>
+
+                            </Trigger.EnterActions>
+                            <Trigger.ExitActions>
+
+                                <BeginStoryboard>
+
+                                    <Storyboard>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).BlurRadius" To="30" Duration="0:0:0.2"/>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).ShadowDepth" To="0" Duration="0:0:0.2"/>
+
+                                    </Storyboard>
+
+                                </BeginStoryboard>
+
+                            </Trigger.ExitActions>
+
+                        </Trigger>
+
+                        <Trigger Property="IsPressed" Value="True">
+
+                            <Setter Property="BorderBrush" TargetName="Border" Value="{StaticResource ShadowBrush}"/>
+
+                            <Setter Property="Effect">
+
+                                <Setter.Value>
+
+                                    <DropShadowEffect Color="{StaticResource DropEffecColor}" ShadowDepth="0" BlurRadius="30" Opacity="0.8"/>
+
+                                </Setter.Value>
+
+                            </Setter>
+
+                            <Trigger.EnterActions>
+
+                                <BeginStoryboard>
+
+                                    <Storyboard>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).BlurRadius" To="0" Duration="0:0:0.2"/>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).ShadowDepth" To="0" Duration="0:0:0.2"/>
+
+                                    </Storyboard>
+
+                                </BeginStoryboard>
+
+                            </Trigger.EnterActions>
+                            <Trigger.ExitActions>
+
+                                <BeginStoryboard>
+
+                                    <Storyboard>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).BlurRadius" To="30" Duration="0:0:0.2"/>
+
+                                        <DoubleAnimation Storyboard.TargetProperty="(Effect).ShadowDepth" To="0" Duration="0:0:0.2"/>
+
+                                    </Storyboard>
+
+                                </BeginStoryboard>
+
+                            </Trigger.ExitActions>
+
+                        </Trigger>
+
+                    </ControlTemplate.Triggers>
+
+                </ControlTemplate>
+
+            </Setter.Value>
+
+        </Setter>
+
+    </Style>
+
 </ResourceDictionary>
